# elowen-ui

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.prebuilt  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.mjs
.assistant/: config.toml
.github/workflows/: publish-image.yml  ui-browser-automation.yml
public/: README.md  app.css
src/: api.rs  app.rs  app_redesign.rs  format.rs  lib.rs  main.rs  models.rs
src/app/: auth.rs  details.rs  jobs.rs  layout.rs  mod.rs  realtime.rs  reconnect.rs  session.rs  state.rs  storage.rs  styles.rs  threads.rs
tests/browser/: chat-surface-polish.spec.mjs  start-server.mjs  ui-browser-automation.spec.mjs
