[package]
name = "elowen-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Location", "Window"] }
